tests/bad_programs/type_errors/scope_leak_if_else.notc
int main() {
    if (true)
        int i = 0;
    else
        i = 1;
    
    return 0;
}
